# terminalphone

./: .gitignore  AGENTS.md  CHANGELOG  Cargo.toml  DOLT_REMOTE.md  HANDOFF.md  LICENSE  README.md  manifest  terminalphone.sh
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md  RUNBOOK.md  SPEC.md
docs/adr/: 0000-template.md  0001-rewrite-to-single-rust-binary.md  0002-in-process-tor-via-arti.md  0003-pipelined-store-and-forward-audio.md  0004-aead-crypto-aes256gcm-hkdf.md  0005-speed-first-anonymity-default.md  0006-beads-for-issue-tracking.md  0007-audio-stack-cpal-audiopus.md  README.md
rs-spike/: .gitignore  Cargo.toml
rs-spike/src/: main.rs
scripts/: e2e-demo.sh
tphone/: Cargo.toml
tphone/fuzz/: Cargo.toml
tphone/fuzz/fuzz_targets/: frame_decode.rs
tphone/src/: app.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  proto.rs  qr.rs  selftest.rs  tui.rs
tphone/src/audio/: capture.rs  codec.rs  mod.rs  playback.rs  voice.rs
tphone/src/transport/: arti.rs  loopback.rs  mod.rs
tphone/tests/: loopback_call.rs  selftest_integration.rs
