[package]
name = "rs-spike"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arti-client = { version = "0.42.0", default-features = false, features = ["tokio", "rustls", "onion-service-service", "onion-service-client"] }
futures = "0.3.32"
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
safelog = "0.8.2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-util", "net"] }
tor-cell = "0.42.0"
tor-hsservice = "0.42.0"
tor-proto = "0.42.0"
tor-rtcompat = "0.42.0"
